# boolfuck

./: Cargo.toml  README.md
src/: lib.rs  program.rs  token.rs
