[package]
name = "boolfuck"
version = "1.0.1"
authors = ["Bastian Kauschke <bastian_kauschke@hotmail.de>"]
description = "A boolfuck interpreter written in rust."
license = "MIT/Apache-2.0"
keywords = ["brainfuck", "interpreter", "compiler", "esolang"]
repository = "https://github.com/lncr/boolfuck"
